nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    # kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/auth-response-headers: '*'
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-expose-headers: '*'
    nginx.ingress.kubernetes.io/cors-max-age: "86400"
    nginx.ingress.kubernetes.io/cors-allow-headers: "authorization,DNT,X-CustomHeader,X-LANG,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,X-Api-Key,X-Device-Id,Access-Control-Allow-Origin"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/websocket-services: server-api-socket-service
    nginx.org/websocket-services: server-api-socket-service
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
 
#  nginx.ingress.kubernetes.io/configuration-snippet: |
#       proxy_http_version 1.1;
#       proxy_set_header Upgrade "websocket";
#       proxy_set_header Connection "Upgrade";
spec:
  ingressClassName: nginx
  rules:
  - host: backend.website.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80

  - host: api.website.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: server-api-service
            port:
              number: 8000
  - host: socket.website.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: server-api-socket-service
            port:
              number: 9000
  
  # - host: cpu.website.com
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: bunnymq-rabbitmq
  #           port:
  #             number: 15672
